--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@designbycode/tailwindcss-text-shadow": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
