--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript-eslint-parser": "^22.0.0",
+    "vercel": "^41.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
